// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CCarousel click on button 1`] = `
<div>
  <div
    class="carousel slide"
  >
    <ol
      class="carousel-indicators"
    >
      <li
        class=""
        data-coreui-target=""
      />
      <li
        class=""
        data-coreui-target=""
      />
      <li
        class="active"
        data-coreui-target=""
      />
    </ol>
    <div
      class="carousel-inner"
    >
      <div
        class="carousel-item exit-done"
      >
        Item-1
        <div
          class="carousel-caption"
        >
          Caption-1
        </div>
      </div>
      <div
        class="carousel-item active enter-done"
      >
        Item-2
        <div
          class="carousel-caption"
        >
          Caption-2
        </div>
      </div>
      <div
        class="carousel-item"
      >
        Item-3
        <div
          class="carousel-caption"
        >
          Caption-3
        </div>
      </div>
    </div>
    <button
      class="carousel-control-prev"
    >
      <span
        aria-label="prev"
        class="carousel-control-prev-icon"
      />
    </button>
    <button
      class="carousel-control-next"
    >
      <span
        aria-label="next"
        class="carousel-control-next-icon"
      />
    </button>
  </div>
</div>
`;

exports[`CCarousel click on button 2`] = `
<div>
  <div
    class="carousel slide"
  >
    <ol
      class="carousel-indicators"
    >
      <li
        class=""
        data-coreui-target=""
      />
      <li
        class=""
        data-coreui-target=""
      />
      <li
        class="active"
        data-coreui-target=""
      />
    </ol>
    <div
      class="carousel-inner"
    >
      <div
        class="carousel-item exit-done"
      >
        Item-1
        <div
          class="carousel-caption"
        >
          Caption-1
        </div>
      </div>
      <div
        class="carousel-item active enter-done"
      >
        Item-2
        <div
          class="carousel-caption"
        >
          Caption-2
        </div>
      </div>
      <div
        class="carousel-item exit-done"
      >
        Item-3
        <div
          class="carousel-caption"
        >
          Caption-3
        </div>
      </div>
    </div>
    <button
      class="carousel-control-prev"
    >
      <span
        aria-label="prev"
        class="carousel-control-prev-icon"
      />
    </button>
    <button
      class="carousel-control-next"
    >
      <span
        aria-label="next"
        class="carousel-control-next-icon"
      />
    </button>
  </div>
</div>
`;

exports[`CCarousel click on indicator 1`] = `
<div>
  <div
    class="carousel slide"
  >
    <ol
      class="carousel-indicators"
    >
      <li
        class=""
        data-coreui-target=""
      />
      <li
        class=""
        data-coreui-target=""
      />
      <li
        class="active"
        data-coreui-target=""
      />
    </ol>
    <div
      class="carousel-inner"
    >
      <div
        class="carousel-item exit-done"
      >
        Item-1
        <div
          class="carousel-caption"
        >
          Caption-1
        </div>
      </div>
      <div
        class="carousel-item active enter-done"
      >
        Item-2
        <div
          class="carousel-caption"
        >
          Caption-2
        </div>
      </div>
      <div
        class="carousel-item"
      >
        Item-3
        <div
          class="carousel-caption"
        >
          Caption-3
        </div>
      </div>
    </div>
    <button
      class="carousel-control-prev"
    >
      <span
        aria-label="prev"
        class="carousel-control-prev-icon"
      />
    </button>
    <button
      class="carousel-control-next"
    >
      <span
        aria-label="next"
        class="carousel-control-next-icon"
      />
    </button>
  </div>
</div>
`;

exports[`CCarousel click on indicator 2`] = `
<div>
  <div
    class="carousel slide"
  >
    <ol
      class="carousel-indicators"
    >
      <li
        class=""
        data-coreui-target=""
      />
      <li
        class="active"
        data-coreui-target=""
      />
      <li
        class=""
        data-coreui-target=""
      />
    </ol>
    <div
      class="carousel-inner"
    >
      <div
        class="carousel-item active enter-done"
      >
        Item-1
        <div
          class="carousel-caption"
        >
          Caption-1
        </div>
      </div>
      <div
        class="carousel-item exit-done"
      >
        Item-2
        <div
          class="carousel-caption"
        >
          Caption-2
        </div>
      </div>
      <div
        class="carousel-item exit-done"
      >
        Item-3
        <div
          class="carousel-caption"
        >
          Caption-3
        </div>
      </div>
    </div>
    <button
      class="carousel-control-prev"
    >
      <span
        aria-label="prev"
        class="carousel-control-prev-icon"
      />
    </button>
    <button
      class="carousel-control-next"
    >
      <span
        aria-label="next"
        class="carousel-control-next-icon"
      />
    </button>
  </div>
</div>
`;

exports[`loads and displays CCarousel component 1`] = `
<div>
  <div
    class="carousel slide"
  >
    <ol
      class="carousel-indicators"
    >
      <li
        class="active"
        data-coreui-target=""
      />
      <li
        class=""
        data-coreui-target=""
      />
      <li
        class=""
        data-coreui-target=""
      />
    </ol>
    <div
      class="carousel-inner"
    >
      <div
        class="carousel-item active"
      >
        Item-1
        <div
          class="carousel-caption"
        >
          Caption-1
        </div>
      </div>
      <div
        class="carousel-item"
      >
        Item-2
        <div
          class="carousel-caption"
        >
          Caption-2
        </div>
      </div>
      <div
        class="carousel-item"
      >
        Item-3
        <div
          class="carousel-caption"
        >
          Caption-3
        </div>
      </div>
    </div>
    <button
      class="carousel-control-prev"
    >
      <span
        aria-label="prev"
        class="carousel-control-prev-icon"
      />
    </button>
    <button
      class="carousel-control-next"
    >
      <span
        aria-label="next"
        class="carousel-control-next-icon"
      />
    </button>
  </div>
</div>
`;
